--- a/src/components/Pokedex.css
+++ b/src/components/Pokedex.css
@@ -2,7 +2,6 @@
     display: flex;
     height: 40rem;
     width: 50rem;
-    background-color: #fe0065;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -14,6 +13,8 @@
     border: 3px solid black;
     position: relative;
     border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-color: #fe0065;
     border-bottom-left-radius: 20px;
 }
 
@@ -89,6 +90,13 @@
 
 .blue {
     background-color: #3298cb;
+}
+
+.gray {
+    background-color: gray;
+}
+.white {
+    background-color: white;
 }
 .left-svg {
     position: absolute;
@@ -211,6 +219,11 @@
     border-radius: 4px;
 }
 
+.square-thin-button {
+    height: .3rem;
+    width: 3rem;
+    border: 2px solid black;
+}
 .sticks{
     display: flex;
     justify-content: center;
@@ -354,6 +367,8 @@
     position: relative;    
     border-bottom: solid black 3px;
     border-bottom-right-radius: 20px;
+    background-color: #fe0065;
+
 }
 
 .pokedex-right::before {
@@ -365,4 +380,81 @@
     height: 32.6rem;
     border-right: solid black 3px;
     border-bottom-right-radius: 20px;
+}
+
+.secondary-screen {
+    height: 7rem;
+    width: 17rem;
+    background-color: gray;
+    border-radius: 8px;
+    border: 4px solid black;
+}
+
+.gen-buttons {
+    margin-top: .1rem;
+    display: grid;
+    grid-template-columns: repeat(5, 3.5rem);
+    grid-template-rows: repeat(2, 3.5rem);
+    /* gap: 0.1rem; */
+    /* width: 10rem; */
+}
+
+.square-button {
+    width: 3.5rem;
+    height: 3.5rem;
+    border: 2px solid black;
+    border-radius: 4px;   
+}
+
+.right-thin-buttons {
+    display: flex;
+    gap: 1rem;
+    justify-content: flex-end;
+    width: 90%;
+    margin-top: .3rem;
+}
+
+.right-middle-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+}
+
+.large-round-button {
+    position: relative;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 60%;
+    border: 3px solid black;
+}
+
+.large-round-button-highlight {
+    height: .8rem;
+    width: .8rem;
+    border-radius: 60%;
+    background-color: rgba(255, 255, 255, .8);
+    position: absolute;
+    top: .4rem;
+    left: .6rem;
+}
+
+.stacked-circles, .stacked-squares {
+    display: flex;
+}
+
+.stacked-circles{
+    gap: .75rem;
+    margin: 1.5rem 0 1rem 0
+}
+
+.stacked-squares {
+    gap: .1rem;
+}
+
+.right-bottom {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
 }
