--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: var(--light-gray);
+}
+body {
+  margin: 0;
 }
