--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
 .App {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   background-color: var(--light-gray);
 }
+
+.title-text {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 body {
   margin: 0;
+  background-color: #b8b8b8;
 }
