--- a/src/components/Autocomplete.css
+++ b/src/components/Autocomplete.css
@@ -1,19 +1,35 @@
 .autocomplete-container {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .autocomplete-inner {
   display: flex;
+  justify-content: center;
 }
 
 .dropdown {
-  background-color: white;
+  background-color: var(--gray);
+  color: var(--off-white);
   display: flex;
   flex-direction: column;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 90%;
+  margin-top: .25rem;
+  padding: .5rem;
+  border-radius: 8px;
 }
 
 .dropdown-row {
   cursor: pointer;
   text-align: start;
+  padding:.25rem;
+}
+
+.dropdown-row:hover {
+  background-color: rgba(140, 140, 140, .5);
+  border: 1px solid black;
 }
